src/App.css
/* colors 
- blue: #4dd8ff;
- yellow: #ffcc4d
*/

/* fonts */
* {
  font-size: 24px;
  font-family: 'Helvetica';
  font-weight: 800;
}

.font-large {
  font-size: 48px;
}

.font-medium {
  font-size: 36px;
}

/* bootstrap overrides */
.container {
  max-width: 100%;
}

.page-container {
  height: -webkit-fill-available;
}

.row {
  margin-top: 16px;
}

/* NAVBAR */
.navbar {
  background: #4dd8ff;
  padding-bottom: 5px;
}

.navbar > a {
  padding-right: 10px;
  padding-left: 10px;
  text-decoration: none;
  text-align: center;
}

.navbar-collapse.in {
  display: block !important;
}

.navbar-light .navbar-nav .nav-link {
  color: rgba(0, 0, 0, 0.8);
}

/* FOOTER */
:root {
  --mainColor: #4dd8ff;
}

.main-footer{
  position: sticky;
  left: 0;
  right: 0;
  bottom: 0;
}

/* LANDING PAGE*/
#logo {
  width: 70%
}

#home-container, #account-container, #about-container {
  width: -webkit-fill-available;;
  height: -webkit-fill-available;;
}

#welcome {
  font-family: 'Helvetica';
  color: black;
  font-size: 40px;
  font-weight: 800;
  padding-top: 20px;
  padding-bottom: 25px;
  text-align: center;
}

#info {
  color: black;
  padding-right: 20px;
  padding-left: 20px;
  font-weight: 100;
}

#tiles{
  color: black;
  padding-right: 20px;
  padding-left: 20px;
  padding-top: 20px;
  font-weight: 100;
}

.card {
  margin-bottom: 20px;
}

.card > img {
  padding-top: 25px;
  padding-bottom: 30px;
  box-align: 'middle';
}

.card-body {
  text-align: center;
}

.card-body > a {
  color: black;
  font-size: 22px;
  font-family: 'Helvetica';
  font-weight: 800;
}

.card-body > #modal > #contact-button {
  color: black;
  background-color: transparent;
  border-color: transparent;
  color: black;
  font-weight: 800;
  font-size: 22px;
  font-family: 'Helvetica';
}

.card-body > a:focus, .card-body  > a:hover, .card-body > #modal > #contact-button:hover {
  /* This is the actual color from the stars in logo png*/
  color: #ffcf00;
  text-decoration: none;
  box-shadow: none;
}

#modal {
  height: "30px";
}

#form-text {
  font-size: 24px;
}

#name, #email, #message{
  border: 2px solid black;
  border-radius: 1px;
}

#contact-prompt{
  text-align: center;
  padding-bottom: 10px;
}

#modal-title {
  font-weight: 800;
}

button#submit-contact {
  width: 200px;
  font-size: 24px;
  margin: auto;
  display: grid;
  border-radius: 0px;
  border: 2px solid black;
}

button#auth0-login, button#auth0-logout{
  margin-right: 50px;
  margin-left: 50px;
  margin-top: 30px;
  margin-bottom: 30px;
  width: 200px;
  background-color: #ffcf00;
  font-size: 24px;
}

/* WHEEL */
#wheel {
  width: 100%;
  height: 100%;
}

button {
  background: none;
  border: 4px solid black;
  font-size: 20px;
  border-radius:5px;
}


#spin {
  bottom: 20vh;
  right: 45vw;
}

#spin:focus {
  outline:none;
}

#readout {
  bottom: 7vh;
  left: 35vw;
}

#selector {
  font-size: 100px;
  width: 100px;
  z-index: 3;
  margin-bottom: -4%;
}

#result{
  font-size:50px;
  color: rgb(0, 180, 120);
}

input {
  font-size: 16px;
  border:none;
  border-bottom: 1px solid black
}

.canvasContainer {
  align-items: center;
}

.str-button, .str-button:hover {
  min-width: 460px;
  padding: 10px;
  background: #ffcc4d;
  border: 4px solid black;
  font-size: 20px;
  border-radius:5px;
}

/* override form styling */
.form-control {
  border: 4px solid black;
  font-size: 20px;
  border-radius:5px;
  margin: 10px;
}

/* About Page */
#card-title{
  font-size: 24px;
  font-weight: 800
}

p#card-info{
  font-size: 20px;
  font-weight: 100;
}

#headshot{
  padding-top: 0px;
  padding-bottom: 0px;
}

#LuLu, #Rachel, #Mackenzie, #Luke{
  height: 500px;
}

/* table styling */
#result-info-table {
  width: inherit;
  border-radius: 5px;
}
#result-info-table tr {
  border: 4px solid black;
  border-radius: 5px;
  line-break: anywhere;
}

#result-hours-table td {
  padding-left: 48px;
}

/* Search page styling */
.dollarButton {
  border-radius: 40px;
  height: 70px;
  width: 70px;
  margin-bottom: 20px;
  margin-right: 50px;
  margin-left: 30px;
}

.options {
  border: 4px solid black;
  border-radius:5px;
  width: 400px;
  margin-bottom: 20px;
  height: 50px;
  margin-left: 70px;
  display: block;
}

.screwReviewButton {
  min-width: 460px;
  padding: 10px;
  background: #ffcc4d;
  border: 4px solid black;
  font-size: 20px;
  border-radius:5px;
  margin-top: 50px;
}

.distanceButton {
  background: none;
  border: 4px solid black;
  font-size: 20px;
  border-radius:5px;
  margin-right: 5px;
  margin-left: 5px;
  width: 100px;
}

.keywordBtn {
  min-width: 650px;
  border: 4px solid black;
  border-radius:5px;
  min-height: 50px;
  margin-left: auto;
  margin-right: auto;
  display: block;
  background-color: lightgray;
}

.searchLogo {
  width: 70%;
  margin-left: auto;
  margin-right: auto;
  display: block;

}

